--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.16",
     "electron": "^25.6.0",
+    "electron-builder": "^24.6.4",
     "electron-vite": "^1.0.27",
     "eslint": "^8.47.0",
     "eslint-plugin-vue": "^9.17.0",
